src/test/ui/imports/local-modularized-tricky-fail-3.stderr
error: macro-expanded `macro_export` macros from the current crate cannot be referred to by absolute paths
  --> $DIR/local-modularized-tricky-fail-3.rs:13:9
   |
LL |     use exported;
   |         ^^^^^^^^

error: macro-expanded `macro_export` macros from the current crate cannot be referred to by absolute paths
  --> $DIR/local-modularized-tricky-fail-3.rs:19:5
   |
LL |     ::exported!();
   |     ^^^^^^^^^^

error: aborting due to 2 previous errors

